[gd_scene load_steps=2 format=3 uid="uid://beb653nx32rd0"]

[ext_resource type="Script" uid="uid://beqb8o2okof3s" path="res://scripts/game_ui.gd" id="1_ui"]

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1_ui")

[node name="TopLeftPanel" type="HBoxContainer" parent="."]
offset_left = 15.0
offset_top = 15.0
offset_right = 300.0
offset_bottom = 55.0
theme_override_constants/separation = 25

[node name="LivesContainer" type="HBoxContainer" parent="TopLeftPanel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HeartIcon" type="Label" parent="TopLeftPanel/LivesContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 28
text = "‚ù§"

[node name="LivesLabel" type="Label" parent="TopLeftPanel/LivesContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "199"
vertical_alignment = 1

[node name="GoldContainer" type="HBoxContainer" parent="TopLeftPanel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="CoinIcon" type="Label" parent="TopLeftPanel/GoldContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
theme_override_font_sizes/font_size = 28
text = "ü™ô"

[node name="GoldLabel" type="Label" parent="TopLeftPanel/GoldContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "$1,542"
vertical_alignment = 1

[node name="TopRightPanel" type="HBoxContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -280.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = 55.0
grow_horizontal = 0
theme_override_constants/separation = 10

[node name="RoundContainer" type="Panel" parent="TopRightPanel"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2

[node name="RoundLabel" type="Label" parent="TopRightPanel/RoundContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -12.0
offset_right = 40.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 18
text = "17/40"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingsButton" type="Button" parent="TopRightPanel"]
custom_minimum_size = Vector2(50, 40)
layout_mode = 2
text = "‚öô"
flat = true

[node name="UpgradesButton" type="Button" parent="TopRightPanel"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 14
text = "UPGRADES"

[node name="RightPanel" type="Panel" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -140.0
offset_top = 80.0
offset_right = -15.0
offset_bottom = 500.0
grow_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="RightPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="PanelHeader" type="Label" parent="RightPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 12
text = "BOMB SHOOTER"
horizontal_alignment = 1

[node name="TowerGrid" type="GridContainer" parent="RightPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 5
columns = 2

[node name="BottomPanel" type="HBoxContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -80.0
offset_right = 100.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 15

[node name="SpecialAbilityButton" type="Button" parent="BottomPanel"]
custom_minimum_size = Vector2(80, 60)
layout_mode = 2
text = "‚ö°"
flat = true

[node name="PlayPauseButton" type="Button" parent="BottomPanel"]
custom_minimum_size = Vector2(80, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 1, 0.2, 1)
text = "‚ñ∂‚ñ∂"

[node name="HintLabel" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 70.0
offset_right = 200.0
offset_bottom = 110.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 0.5, 1)
theme_override_font_sizes/font_size = 18
text = "ÌûåÌä∏ Î©îÏãúÏßÄ"
horizontal_alignment = 1
vertical_alignment = 1
