extends CanvasLayer

# ê²Œìž„ UI - Bloons TD ìŠ¤íƒ€ì¼

signal tower_button_pressed
signal settings_button_pressed
signal upgrades_button_pressed

@onready var lives_label: Label = $TopLeftPanel/LivesContainer/LivesLabel
@onready var gold_label: Label = $TopLeftPanel/GoldContainer/GoldLabel
@onready var round_label: Label = $TopRightPanel/RoundContainer/RoundLabel
@onready var settings_button: Button = $TopRightPanel/SettingsButton
@onready var upgrades_button: Button = $TopRightPanel/UpgradesButton
@onready var tower_grid: GridContainer = $RightPanel/VBoxContainer/TowerGrid
@onready var special_ability_button: Button = $BottomPanel/SpecialAbilityButton
@onready var play_pause_button: Button = $BottomPanel/PlayPauseButton
@onready var hint_label: Label = $HintLabel

var game_manager: Node = null
var is_speed_doubled: bool = false
var max_waves: int = 40

func _ready() -> void:
	if settings_button:
		settings_button.pressed.connect(_on_settings_pressed)
	if upgrades_button:
		upgrades_button.pressed.connect(_on_upgrades_pressed)
	if play_pause_button:
		play_pause_button.pressed.connect(_on_play_pause_pressed)
	if special_ability_button:
		special_ability_button.pressed.connect(_on_special_ability_pressed)

	# íƒ€ì›Œ ê·¸ë¦¬ë“œì— ìž„ì‹œ íƒ€ì›Œ ë²„íŠ¼ë“¤ ì¶”ê°€ (ë‚˜ì¤‘ì— ë™ì ìœ¼ë¡œ ìƒì„±)
	_create_tower_buttons()

func set_game_manager(manager: Node) -> void:
	game_manager = manager

func update_gold(amount: int) -> void:
	if gold_label:
		gold_label.text = "$" + _format_number(amount)

func update_lives(amount: int) -> void:
	if lives_label:
		lives_label.text = str(amount)

func update_wave(wave: int) -> void:
	if round_label:
		round_label.text = str(wave) + "/" + str(max_waves)

func update_score(_score: int) -> void:
	# ì ìˆ˜ëŠ” ë³„ë„ë¡œ í‘œì‹œí•˜ì§€ ì•ŠìŒ (Bloons TD ìŠ¤íƒ€ì¼)
	pass

func _format_number(num: int) -> String:
	var str_num = str(num)
	var result = ""
	var count = 0

	for i in range(str_num.length() - 1, -1, -1):
		if count == 3:
			result = "," + result
			count = 0
		result = str_num[i] + result
		count += 1

	return result

func _create_tower_buttons() -> void:
	# ìž„ì‹œ íƒ€ì›Œ ë²„íŠ¼ë“¤ (6ê°œ)
	var tower_data = [
		{"name": "ê¸°ë³¸", "cost": 160, "emoji": "ðŸµ"},
		{"name": "ë¹ ë¥¸", "cost": 170, "emoji": "ðŸ¦§"},
		{"name": "í­íƒ„", "cost": 275, "emoji": "ðŸ’£"},
		{"name": "ëŒ€í¬", "cost": 445, "emoji": "ðŸ’¥"},
		{"name": "ì–¼ìŒ", "cost": 240, "emoji": "â„ï¸"},
		{"name": "ì–¼ìŒ2", "cost": 425, "emoji": "ðŸ§Š"}
	]

	for data in tower_data:
		var button = Button.new()
		button.custom_minimum_size = Vector2(55, 70)

		# ë²„íŠ¼ í…ìŠ¤íŠ¸ (ì´ëª¨ì§€ + ê°€ê²©)
		button.text = data.emoji + "\n$" + str(data.cost)
		button.pressed.connect(_on_tower_button_pressed.bind(data.name))

		tower_grid.add_child(button)

func _on_tower_button_pressed(_tower_type: String = "") -> void:
	tower_button_pressed.emit()
	show_hint("íƒ€ì›Œ ë°°ì¹˜: ì¢Œí´ë¦­-ë°°ì¹˜ / ìš°í´ë¦­-ì·¨ì†Œ", 3.0)

func _on_settings_pressed() -> void:
	settings_button_pressed.emit()
	print("ì„¤ì • ë²„íŠ¼ í´ë¦­")

func _on_upgrades_pressed() -> void:
	upgrades_button_pressed.emit()
	print("ì—…ê·¸ë ˆì´ë“œ ë²„íŠ¼ í´ë¦­")

func _on_play_pause_pressed() -> void:
	is_speed_doubled = not is_speed_doubled

	if is_speed_doubled:
		Engine.time_scale = 2.0
		play_pause_button.text = "â–¶â–¶â–¶"
		play_pause_button.modulate = Color(1, 0.5, 0, 1)  # ì£¼í™©ìƒ‰
	else:
		Engine.time_scale = 1.0
		play_pause_button.text = "â–¶â–¶"
		play_pause_button.modulate = Color(0.2, 1, 0.2)  # ë…¹ìƒ‰

	print("ê²Œìž„ ì†ë„: ", Engine.time_scale, "ë°°")

func _on_special_ability_pressed() -> void:
	print("íŠ¹ìˆ˜ ëŠ¥ë ¥ ì‚¬ìš©")
	show_hint("íŠ¹ìˆ˜ ëŠ¥ë ¥ í™œì„±í™”!", 2.0)

func show_hint(message: String, duration: float = 2.0) -> void:
	if hint_label:
		hint_label.text = message
		hint_label.visible = true

		# ì¼ì • ì‹œê°„ í›„ ìˆ¨ê¹€
		await get_tree().create_timer(duration).timeout
		if hint_label:
			hint_label.visible = false

func hide_hint() -> void:
	if hint_label:
		hint_label.visible = false
